[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
error-chain = "0.12.4"
num = "0.4.0"
image = "0.23.14"
num_cpus = "1.13.0"
